# performancegaming

./: .gitignore  Install-Win11GamingSuite.ps1  README.md  Setup-DiscordServer.ps1  Win11-Gaming-Audit.ps1  Win11-Gaming-Benchmark.ps1  Win11-Gaming-Launcher.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: desktop-check.yml  desktop-release.yml  lint.yml  release.yml
apps/desktop/: package.json  vite.config.ts
apps/desktop/src/: app.css  app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/resources/scripts/: .gitkeep  Win11-Gaming-Audit.ps1  Win11-Gaming-Sentinel.ps1  apply-fix.ps1
apps/desktop/src-tauri/resources/scripts/lib/: json-emit.ps1
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: audit.rs  fix.rs  history.rs  mod.rs
apps/desktop/src-tauri/src/ps/: orchestrator.rs
apps/desktop/src/lib/components/: ModeToggle.svelte
apps/desktop/src/lib/components/cyberpunk/: GlitchText.svelte  (+4 more)
apps/desktop/src/lib/design/: animations.css  tokens.css
apps/desktop/src/lib/ipc/: tauri.ts
apps/desktop/src/lib/stores/: apply.ts  history.ts  scan.ts
apps/desktop/src/routes/: +layout.svelte  +page.svelte
apps/desktop/src/routes/history/: +page.svelte
apps/desktop/src/routes/scan/: +page.svelte
apps/desktop/src/routes/showcase/: +page.svelte
apps/desktop/static/beta/: index.html
apps/desktop/static/downloads/: ClockReaper_0.1.0_x64_pt-BR.msi
(+5 files in other folders)
